@@ -2,16 +2,25 @@ package uk.gov.hmcts.reform.iacasedocumentsapi.infrastructure.security;
 
 import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Sets;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Stream;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.access.AccessDeniedException;
@@ -21,8 +30,9 @@ import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.ccd.Event;
 public class CcdEventAuthorizorTest {
 
     @Mock private AuthorizedRolesProvider authorizedRolesProvider;
-
     private CcdEventAuthorizor ccdEventAuthorizor;
+    private static final String EVENT_NOT_ALLOWED = "Event 'unknown' not allowed";
+    private final String role = "caseworker-ia";
 
     @BeforeEach
     public void setUp() {
@@ -31,8 +41,9 @@ public class CcdEventAuthorizorTest {
             new CcdEventAuthorizor(
                 ImmutableMap
                     .<String, List<Event>>builder()
-                    .put("caseworker-role", Arrays.asList(Event.REQUEST_RESPONDENT_REVIEW, Event.SEND_DIRECTION))
-                    .put("legal-role", Arrays.asList(Event.SUBMIT_APPEAL, Event.BUILD_CASE))
+                    .put("caseworker-role", List.of(Event.REQUEST_RESPONDENT_REVIEW, Event.SEND_DIRECTION))
+                    .put("legal-role", List.of(Event.SUBMIT_APPEAL, Event.BUILD_CASE))
+                    .put(role, List.of(Event.UNKNOWN))
                     .build(),
                 authorizedRolesProvider
             );
@@ -98,5 +109,40 @@ public class CcdEventAuthorizorTest {
         assertThatThrownBy(() -> ccdEventAuthorizor.throwIfNotAuthorized(Event.BUILD_CASE))
             .hasMessage("Event 'buildCase' not allowed")
             .isExactlyInstanceOf(AccessDeniedException.class);
+    }
+
+    @Test
+    void should_not_throw_exception_when_event_is_allowed() {
+        when(authorizedRolesProvider.getRoles()).thenReturn(Set.of(role));
+        ccdEventAuthorizor.throwIfNotAuthorized(Event.UNKNOWN);
+        verify(authorizedRolesProvider, times(1)).getRoles();
+    }
+
+    @Test
+    void should_throw_exception_when_provider_returns_empty_list() {
+        when(authorizedRolesProvider.getRoles()).thenReturn(Collections.emptySet());
+        AccessDeniedException thrown = assertThrows(
+            AccessDeniedException.class,
+            () -> ccdEventAuthorizor.throwIfNotAuthorized(Event.UNKNOWN)
+        );
+        assertEquals(EVENT_NOT_ALLOWED, thrown.getMessage());
+    }
+
+    @ParameterizedTest
+    @MethodSource("provideScenariosForDeniedAccess")
+    void should_throw_exception_when_access_map_is_incorrect(Map<String, List<Event>> roleEventAccess, String expectedMessage) {
+        ccdEventAuthorizor = new CcdEventAuthorizor(roleEventAccess, authorizedRolesProvider);
+        AccessDeniedException thrown = assertThrows(
+            AccessDeniedException.class,
+            () -> ccdEventAuthorizor.throwIfNotAuthorized(Event.UNKNOWN)
+        );
+        assertEquals(expectedMessage, thrown.getMessage());
+    }
+
+    private static Stream<Arguments> provideScenariosForDeniedAccess() {
+        return Stream.of(
+            Arguments.of(new ImmutableMap.Builder<String, List<Event>>().build(), EVENT_NOT_ALLOWED),
+            Arguments.of(new ImmutableMap.Builder<String, List<Event>>().put("caseworker-ia", Collections.emptyList()).build(), EVENT_NOT_ALLOWED)
+        );
     }
 }
